Update revision
Signed-off-by: sashas777 <cybergomel@gmail.com>